[package]
name = "project-turtleback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_rapier3d = {version = "0.23.0", features = ["debug-render-3d"]}
bevy_flycam = "0.12.0"
time = "0.3.31"

[profile.dev.package.bevy_rapier3d]
opt-level = 3